--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,18 @@
       {
         "name": "Vladimir Korshunov",
         "email": "v.korshunov@wwpass.com"
+      },
+      {
+        "name": "Ekaterina Moskovkina",
+        "email": "e.moskovkina@wwpass.com"
       }
     ],
+    "require": {
+        "php": ">=7.0"
+    },
     "autoload": {
         "psr-4": {
             "WWPass\\": "src/"
         }
-    },
-    "require": {
-        "php": ">=5.6",
-        "ext-curl": "*"
     }
 }
